src/test/deca/syntax/invalid/provided/NoTypeField.deca
// DESCRIPTION: Déclaration d'un field sans type
class alpha{
	protected b;
}
